--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -1,6 +1,7 @@
 .container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 2rem;
-  border: 8px solid blue;
+  display: flex;
+  flex-direction: column;
+  margin: 3rem auto 6rem;
+  max-width: 40rem;
+  padding: 0 0rem;
 }
